--- a/MyFirstComposeApp/gradle/libs.versions.toml
+++ b/MyFirstComposeApp/gradle/libs.versions.toml
@@ -11,6 +11,9 @@ activityCompose = "1.8.0"
 composeBom = "2024.04.01"
 constraintlayoutversion = "1.0.1"
 lottieCompose = "6.6.6"
+navigationCompose = "2.9.4"
+kotlinxSerializationJson = "1.7.3"
+kotlinxSerializationPlugin = "2.0.21"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -31,9 +34,12 @@ androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 contraint-layout = { module = "androidx.constraintlayout:constraintlayout-compose", version.ref = "constraintlayoutversion" }
 lottie-compose = { module = "com.airbnb.android:lottie-compose", version.ref = "lottieCompose" }
+androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
+kotlinx-serializaton-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+kotlinSerialization = { id = 'org.jetbrains.kotlin.plugin.serialization', version.ref = 'kotlinxSerializationPlugin'}
 
